--- a/SimpleConfigs.JSON/SimpleConfigs.JSON.csproj
+++ b/SimpleConfigs.JSON/SimpleConfigs.JSON.csproj
@@ -4,14 +4,36 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Title>Extension for SimpleConfigs package</Title>
+    <Version>1.0.0</Version>
+    <Company>DanPie</Company>
+    <Description>Extension for SimpleConfigs package.
+Give you abbility to easy create, read and update config files in json format.
+Documentation: https://github.com/DanyloSih/SimpleConfigs</Description>
+    <PackageProjectUrl>https://github.com/DanyloSih/SimpleConfigs</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/DanyloSih/SimpleConfigs</RepositoryUrl>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.0</FileVersion>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Authors>DanPie</Authors>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SimpleConfigs\SimpleConfigs.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SimpleConfigs" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
