--- a/SimpleConfigs.Test/SimpleConfigs.Test.csproj
+++ b/SimpleConfigs.Test/SimpleConfigs.Test.csproj
@@ -9,10 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\SimpleConfigs.JSON\SimpleConfigs.JSON.csproj" />
+    <PackageReference Include="SimpleConfigs.JSON" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
