--- a/SimpleConfigs.JSON/SimpleConfigs.JSON.csproj
+++ b/SimpleConfigs.JSON/SimpleConfigs.JSON.csproj
@@ -33,7 +33,10 @@ Documentation: https://github.com/DanyloSih/SimpleConfigs</Description>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="SimpleConfigs" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SimpleConfigs\SimpleConfigs.csproj" />
   </ItemGroup>
 
 </Project>
