--- a/SimpleConfigs.Test/SimpleConfigs.Test.csproj
+++ b/SimpleConfigs.Test/SimpleConfigs.Test.csproj
@@ -12,9 +12,15 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NUnit" Version="3.14.0" />
     <PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SimpleConfigs.JSON\SimpleConfigs.JSON.csproj" />
+    <ProjectReference Include="..\SimpleConfigs\SimpleConfigs.csproj" />
   </ItemGroup>
 
   <ItemGroup>
