--- a/SimpleConfigs.JSON/SimpleConfigs.JSON.csproj
+++ b/SimpleConfigs.JSON/SimpleConfigs.JSON.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Title>Extension for SimpleConfigs package</Title>
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
     <Company>DanPie</Company>
     <Description>Extension for SimpleConfigs package.
 Give you abbility to easy create, read and update config files in json format.
@@ -13,8 +13,8 @@ Documentation: https://github.com/DanyloSih/SimpleConfigs</Description>
     <PackageProjectUrl>https://github.com/DanyloSih/SimpleConfigs</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/DanyloSih/SimpleConfigs</RepositoryUrl>
-    <AssemblyVersion>1.0.0</AssemblyVersion>
-    <FileVersion>1.0.0</FileVersion>
+    <AssemblyVersion>1.1.0</AssemblyVersion>
+    <FileVersion>1.1.0</FileVersion>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Authors>DanPie</Authors>
@@ -33,10 +33,7 @@ Documentation: https://github.com/DanyloSih/SimpleConfigs</Description>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\SimpleConfigs\SimpleConfigs.csproj" />
+    <PackageReference Include="SimpleConfigs" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
